--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/Theme.FireflyRemote">
         <activity
             android:name=".FullscreenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="landscape"
+            android:configChanges="screenSize"
             android:label="@string/app_name"
             android:theme="@style/Theme.FireflyRemote.Fullscreen">
             <intent-filter>
